# Avant-Garde

./: CMakeLists.txt  build_after_fi_rebuild.txt  build_after_hud.txt  build_after_hud_anim.txt  build_after_hud_anim_fix.txt  build_after_hud_debug.txt  build_after_hud_fix.txt  build_after_hud_fix2.txt  build_after_hud_fix3.txt  build_after_instruments.txt  build_after_shader_fix.txt  build_log_after_fix.txt  build_log_fix.txt  cmake_after_hud.txt  cmake_reconf.txt  settings.gradle
1/: gradlew
Blacknode/: CMakeLists.txt
WiredVideoViewerNative/: README_IMPROVEMENTS.md  build.gradle  build_app.sh  gradlew  gradlew.bat  local.properties  settings.gradle  simple_build.sh
WiredVideoViewerNative/app/: build.gradle
WiredVideoViewerNative/app/src/main/: AndroidManifest.xml
WiredVideoViewerNative/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
WiredVideoViewerNative/app/src/main/java/com/wiredvideoviewer/: MainActivity.kt
WiredVideoViewerNative/app/src/main/res/layout/: activity_main.xml
WiredVideoViewerNative/app/src/main/res/values/: strings.xml  themes.xml
WiredVideoViewerNative/docs/: agent_state.md  improvement_summary.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: main.cpp
app/src/main/cpp/network/: UdpMjpegReceiver.cpp  UdpMjpegReceiver.h
app/src/main/cpp/render/: Renderer.cpp  Renderer.h
app/src/main/java/android/: Manifest.java
app/src/main/java/android/app/: Activity.java
app/src/main/java/android/content/: Context.java
app/src/main/java/android/content/pm/: PackageManager.java
app/src/main/java/android/os/: PowerManager.java
app/src/main/java/androidx/core/app/: ActivityCompat.java
app/src/main/java/androidx/core/content/: ContextCompat.java
app/src/main/java/com/blacknode/: BlacknodeBridge.java  NativeBridge.java  PermissionsBridge.java
assets/: config.json
docs/: agent-state.md  agent_state.md
src/: NetworkManager.cpp  NetworkManager.h  PacketDefs.h  Renderer.cpp  Renderer.h  VideoDec.cpp  VideoDec.h  main.cpp  main_app.cpp
src/Android/: PermissionsBridge.java
src/Network/: NetworkPorts.h  UdpReceiver.cpp
src/Render/: Scene.cpp
src/Video/: Decoder.cpp
src/android/: JNI.cpp
src/core/: EventBus.cpp  EventBus.h  Logger.cpp  Logger.h  NativeBridge.cpp  NativeBridge.h  RingBuffer.h  StateMachine.cpp  StateMachine.hpp
src/net/: BackpressureDetector.cpp  BackpressureDetector.h  ControlSender.cpp  ControlSender.h  TCPClient.cpp  TCPClient.h  UdpReceiver.cpp  UdpReceiver.h  WebSocketClient.cpp  WebSocketClient.h
src/render/: GLRenderer.cpp  GLRenderer.h
src/ui/: CameraOrbitController.cpp  CameraOrbitController.h  Edge3D.cpp  Edge3D.h  FlightInstruments.cpp  FlightInstruments.h  HUD.cpp  HUD.h  Node3D.cpp  Node3D.h  SceneGraph.cpp  SceneGraph.h  TouchController.cpp  TouchController.h
